cfn_benchmark/cfn_templates/eijikominami__aws-cloudformation-templates/web-servers__templates__template.yaml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Description: aws-cloudformation-templates/web-servers creates an Elastic Load Balancer and EC2 instances for Web Servers.

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: 'Server Configuration'
        Parameters:
          - ComputeType
          - AutoScalingLoadBalancerType
          - AutoScalingMaxSize
          - DesiredCapacity
      - Label:
          default: 'EC2 Configuration'
        Parameters:
          - EC2ImageId
          - EC2InstanceType
          - EC2KeyName
          - EC2VolumeSize
          - EC2DailySnapshotScheduledAt
      - Label:
          default: 'Distribution Configuration'
        Parameters:
          - CloudFrontDefaultTTL
          - CloudFrontMinimumTTL
          - CloudFrontMaximumTTL
          - CloudFrontViewerProtocolPolicy
          - CloudFrontDefaultRootObject
          - CloudFrontAdditionalName
          - CloudFrontSecondaryOriginId
          - CloudFrontRestrictViewerAccess
          - CloudFront403ErrorResponsePagePath
          - CloudFront404ErrorResponsePagePath
          - CloudFront500ErrorResponsePagePath
          - GlobalInfrastructure
      - Label:
          default: 'AvailabilityZone Configuration'
        Parameters:
          - VPCCidrBlock
          - SubnetPublicCidrBlockForAz1
          - SubnetPrivateCidrBlockForAz1
          - SubnetTransitCidrBlockAz1
          - SubnetPublicCidrBlockForAz2
          - SubnetPrivateCidrBlockForAz2
          - SubnetTransitCidrBlockAz2
          - SubnetPublicCidrBlockForAz3
          - SubnetPrivateCidrBlockForAz3
          - SubnetTransitCidrBlockAz3
      - Label:
          default: 'Transit Gateway Configuration'
        Parameters:
          - TransitGatewayId
          - TransitGatewayDestinationCidrBlock
      - Label:
          default: 'Domain Configuration'
        Parameters:
          - ACMValidationMethod
          - ACMDomainName
          - CertificateManagerARN
          - DomainName
          - Route53HostedZoneId
      - Label:
          default: 'WAF Configuration'
        Parameters:
          - WebACL
          - WebACLArnForCloudFront
      - Label:
          default: 'Logging Configuration'
        Parameters:
          - Logging
          - AccountIdForAnalysis
          - BucketNameForAnalysis
          - CentralizedLogBucketName
          - LogGroupNameTransferredToS3
      - Label:
          default: 'CI/CD Pipeline Configuration'
        Parameters:
          - BucketNameForArtifact
          - CodeStarConnectionArn
          - GitHubOwnerNameForArtifact
          - GitHubRepoNameForArtifact
          - GitHubBranchNameForArtifact
          - GitHubBranchNameForBuildSpec
          - DockerFilePath
      - Label:
          default: 'Notification Configuration'
        Parameters:
          - AlarmLevel
          - SNSForAlertArn
          - SNSForDeploymentArn
      - Label:
          default: 'Tag Configuration'
        Parameters:
          - Environment
          - TagKey
          - TagValue

Parameters:
  AccountIdForAnalysis:
    Type: String
    Default: ''
    Description: The AWS account id for log analysis
  ACMValidationMethod:
    Type: String
    Default: DNS
    AllowedValues:
      - DNS
      - EMAIL
    Description: The validation method that you own or control the domain [conditional]
  ACMDomainName:
    Type: String
    Default: ''
    Description: The domain name created by Certification Manager
  AlarmLevel:
    Type: String
    Default: NOTICE
    AllowedValues:
      - NOTICE
      - WARNING
    Description: The alarm level of CloudWatch alarms
  AutoScalingMaxSize:
    Type: Number
    Default: 1
    MinValue: 0
    Description: AutoScaling Max Size [conditional]
  AutoScalingLoadBalancerType:
    Type: String
    Default: None
    AllowedValues:
      - None
      - application
      - network
    Description: The autoScaling LoadBalancer Type [conditional]
  BucketNameForAnalysis:
    Type: String
    Default: ''
    Description: The Amazon S3 bucket name for log analysis
  BucketNameForArtifact:
    Type: String
    Default: ''
    Description: The bucket name artifact art stored
  CentralizedLogBucketName:
    Type: String
    Default: ''
    Description: The centralize S3 bucket name for logging
  CertificateManagerARN:
    Default: ''
    Type: String
    Description: The ARN of an SSL Certifiation attached to CloudFront
  CloudFrontDefaultTTL:
    Default: 86400
    MinValue: 0
    Type: Number
    Description: CloudFront Default TTL [required]
  CloudFrontMinimumTTL:
    Default: 0
    MinValue: 0
    Type: Number
    Description: CloudFront Minimum TTL [required]
  CloudFrontMaximumTTL:
    Default: 31536000
    MinValue: 0
    Type: Number
    Description: CloudFront Maximum TTL [required]
  CloudFrontViewerProtocolPolicy:
    Type: String
    Default: redirect-to-https
    AllowedValues:
      - allow-all
      - redirect-to-https
      - https-only
    Description: CloudFront Viewer Protocol Policy [required]
  CloudFrontDefaultRootObject:
    Type: String
    Default: index.html
    AllowedPattern: .+
    Description: CloudFront Viewer Protocol Policy [required]
  CloudFrontAdditionalName:
    Type: String
    Default: ''
    Description: The CNAME attached to CloudFront
  CloudFrontSecondaryOriginId:
    Type: String
    Default: ''
    Description: The S3 bucket name for Secondary Origin
  CloudFrontRestrictViewerAccess:
    Type: String
    Default: DISABLED
    AllowedValues:
      - ENABLED
      - DISABLED
    Description: Enable or disable Restrict Viewer Access [required]
  CloudFront403ErrorResponsePagePath:
    Type: String
    Default: ''
    Description: The path to the 403 custom error page
  CloudFront404ErrorResponsePagePath:
    Type: String
    Default: ''
    Description: The path to the 404 custom error page
  CloudFront500ErrorResponsePagePath:
    Type: String
    Default: ''
    Description: The path to the 500 custom error page
  CodeStarConnectionArn:
    Type: String
    Default: ''
    Description: The Amazon Resource Name (ARN) of the CodeStar connection
  ComputeType:
    Type: String
    Default: INSTANCE
    AllowedValues:
      - INSTANCE
      - CONTAINER
      - APPRUNNER
    Description: The category of computing platform [recuired]
  DesiredCapacity:
    Type: Number
    Default: 1
    MinValue: 0
    Description: AutoScaling Desired Capacity [conditional]
  DockerFilePath:
    Type: String
    Default: ''
    Description: The path of Dockerfile
  DomainName:
    Type: String
    Default: ''
    Description: The CNAME attached to Elastic Load Balancer
  EC2DailySnapshotScheduledAt:
    Type: String
    Default: '17:00'
    Description: Daily Snapshot time (HH:MM)
  EC2ImageId:
    Type: AWS::EC2::Image::Id
    Default: ami-03dceaabddff8067e
    AllowedPattern: ^ami-.+$
    Description: The EC2 Image Id [conditional]
  EC2InstanceType:
    Type: String
    Default: t3.micro
    Description: The EC2 Instance Type [conditional]
  EC2KeyName:
    Type: String
    Default: ''
    Description: The name of an existing EC2 KeyPair to enable SSH access to the instance
  EC2VolumeSize:
    Type: Number
    Default: 8
    MinValue: 8
    Description: EC2 Volume Size [conditional]
  GitHubOwnerNameForArtifact:
    Type: String
    Default: ''
    Description: The GitHub owner name
  GitHubRepoNameForArtifact:
    Type: String
    Default: ''
    Description: The GitHub repository name
  GitHubBranchNameForArtifact:
    Type: String
    Default: master
    AllowedPattern: .+
    Description: The Branch name of GitHub
  GitHubBranchNameForBuildSpec:
    Type: String
    Default: master
    AllowedPattern: .+
    Description: The Branch name of GitHub For BuildSpec
  GlobalInfrastructure:
    Type: String
    Default: NONE
    AllowedValues:
      - NONE
      - CLOUDFRONT
      - GLOBAL_ACCELERATOR
    Description: Enable or disable CloudFront, Global Accelerator [required]
  Logging:
    Type: String
    Default: ENABLED
    AllowedValues:
      - ENABLED
      - DISABLED
    Description: Enable or disable logging [required]
  LogGroupNameTransferredToS3:
    Type: String
    Default: ''
    Description: The log group name transfferd to an S3 bucket
  Route53HostedZoneId:
    Type: String
    Default: ''
    Description: Route53 hosted zone id
  SubnetPrivateCidrBlockForAz1:
    Type: String
    Default: 10.2.0.0/24
    AllowedPattern: ^[0-9./]*$
    Description: The private subnet CIDR block at AZ1
  SubnetPrivateCidrBlockForAz2:
    Type: String
    Default: 10.2.2.0/24
    AllowedPattern: ^[0-9./]*$
    Description: The private subnet CIDR block at AZ2
  SubnetPrivateCidrBlockForAz3:
    Type: String
    Default: 10.2.4.0/24
    AllowedPattern: ^[0-9./]*$
    Description: The private subnet CIDR block at AZ3
  SubnetPublicCidrBlockForAz1:
    Type: String
    Default: 10.2.1.0/25
    AllowedPattern: ^[0-9./]*$
    Description: The public subnet CIDR block at AZ1 [required]
  SubnetPublicCidrBlockForAz2:
    Type: String
    Default: 10.2.3.0/25
    AllowedPattern: ^[0-9./]*$
    Description: The public subnet CIDR block at AZ2 [required]
  SubnetPublicCidrBlockForAz3:
    Type: String
    Default: 10.2.5.0/25
    AllowedPattern: ^[0-9./]*$
    Description: The public subnet CIDR block at AZ3 [required]
  SubnetTransitCidrBlockAz1:
    Type: String
    Default: 10.2.1.128/25
    AllowedPattern: ^[0-9./]*$
    Description: The transit subnet CIDR block at AZ1
  SubnetTransitCidrBlockAz2:
    Type: String
    Default: 10.2.3.128/25
    AllowedPattern: ^[0-9./]*$
    Description: The transit subnet CIDR block at AZ2
  SubnetTransitCidrBlockAz3:
    Type: String
    Default: 10.2.5.128/25
    AllowedPattern: ^[0-9./]*$
    Description: The transit subnet CIDR block at AZ3
  TransitGatewayId:
    Type: String
    Default: ''
    Description: The ID of a transit gateway
  TransitGatewayDestinationCidrBlock:
    Type: String
    Default: ''
    Description: The IPv4 CIDR block forward to TransitGateway
  VPCCidrBlock:
    Type: String
    Default: 10.2.0.0/21
    AllowedPattern: ^[0-9./]*$
    Description: The VPC CIDR block [required]
  WebACL:
    Type: String
    Default: DISABLED
    AllowedValues:
      - ENABLED
      - DISABLED
    Description: Enable or disable WebACL [required]
  WebACLArnForCloudFront:
    Type: String
    Default: ''
    Description: Web ACL ARN for CloudFront
  SNSForAlertArn:
    Type: String
    Default: ''
    Description: The Amazon SNS topic ARN for alert
  SNSForDeploymentArn:
    Type: String
    Default: ''
    Description: The Amazon SNS topic ARN for deployment information
  Environment:
    Type: String
    Default: production
    AllowedValues:
      - production
      - test
      - development
  TagKey:
    Type: String
    Default: createdby
    AllowedPattern: .+
  TagValue:
    Type: String
    Default: aws-cloudformation-templates
    AllowedPattern: .+

Conditions:
  KeyExists: !Not [ !Equals [ !Ref EC2KeyName, '' ] ]
  CreateAutoScaling: !And [ !Not [ !Equals [ !Ref AutoScalingLoadBalancerType, None ] ], !Equals [ !Ref ComputeType, INSTANCE ] ]
  CreateCloudFront: !Equals [ !Ref GlobalInfrastructure, CLOUDFRONT ]
  CreateContainerPipeline: !And [ !Equals [ !Ref ComputeType, CONTAINER], !Not [ !Equals [ !Ref GitHubOwnerNameForArtifact, '' ] ], !Not [ !Equals [ !Ref GitHubRepoNameForArtifact, '' ] ] ]
  CreateDataLifecycleManager: !Not [ !Equals [ !Ref EC2DailySnapshotScheduledAt, '' ] ]
  CreateEC2: !And [ !Equals [ !Ref AutoScalingLoadBalancerType, None ], !Equals [ !Ref ComputeType, INSTANCE ] ]
  CreateGlobalAccelerator: !Equals [ !Ref GlobalInfrastructure, GLOBAL_ACCELERATOR ]
  CreateNetworkLoadBalancer: !Equals [ !Ref AutoScalingLoadBalancerType, network ]
  CreatePrivateSubnets: !Or [ !And [ !Not [ !Equals [ !Ref AutoScalingLoadBalancerType, None ] ], !Equals [ !Ref ComputeType, INSTANCE ] ], !And [ !Equals [ !Ref ComputeType, CONTAINER], !Not [ !Equals [ !Ref GitHubOwnerNameForArtifact, '' ] ], !Not [ !Equals [ !Ref GitHubRepoNameForArtifact, '' ] ] ]]
  CreateEC2AndRoute53: !And [ !Equals [ !Ref AutoScalingLoadBalancerType, None ], !Equals [ !Ref ComputeType, INSTANCE ], !Equals [ !Ref GlobalInfrastructure, CLOUDFRONT ], !Equals [ !Ref AutoScalingLoadBalancerType, None ], !Not [ !Equals [ !Ref Route53HostedZoneId, ''] ], !Not [ !Equals [ !Ref DomainName, ''] ] ]
  CreateS3ReplicationForAnalysis: !And [ !Not [ !Equals [ !Ref AccountIdForAnalysis, ''] ], !Not [ !Equals [ !Ref BucketNameForAnalysis, ''] ]]
  CreateSNSForAlert: !Equals [ !Ref SNSForAlertArn, '']
  CreateSNSForDeployment: !Equals [ !Ref SNSForDeploymentArn, '']
  CreateTransitGateway: !And [ !Not [ !Equals [ !Ref TransitGatewayId, '' ] ], !Not [ !Equals [ !Ref TransitGatewayDestinationCidrBlock, '' ] ] ]
  CreateWAFForCloudFront: !And [!Equals [ !Ref GlobalInfrastructure, CLOUDFRONT ], !Equals [ !Ref WebACL, ENABLED ] ]
  CreateWAFForALB: !And [!Equals [ !Ref GlobalInfrastructure, CLOUDFRONT ], !Equals [ !Ref AutoScalingLoadBalancerType, application ], !Equals [ !Ref ComputeType, INSTANCE ], !Equals [ !Ref WebACL, ENABLED ] ]
  CreateFirehose: !Not [ !Equals [ !Ref LogGroupNameTransferredToS3, '' ] ]
  Development: !Equals [ !Ref Environment, development]

Resources:
  # Nested Stack
  Az1:
    DependsOn:
      # NATGateway requires provisioned Internet Gateway.
      - InternetGatewayAttachment
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/availability-zone
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        AlarmLevel: !Ref AlarmLevel
        AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
        InternetGatewayId: !Ref InternetGateway
        NetworkLoadBalancer: !If
         - CreateNetworkLoadBalancer
         - ENABLED
         - DISABLED
        LogicalName: !Ref AWS::StackName
        SubnetPublicCidrBlock: !Ref SubnetPublicCidrBlockForAz1
        SubnetPrivateCidrBlock: !If
          - CreatePrivateSubnets
          - !Ref SubnetPrivateCidrBlockForAz1
          - !Ref AWS::NoValue
        SubnetTransitCidrBlock: !If
          - CreateTransitGateway
          - !Ref SubnetTransitCidrBlockAz1
          - !Ref AWS::NoValue
        SNSForAlertArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        SNSForDeploymentArn: !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
        VPCId: !Ref VPC
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  Az2:
    DependsOn:
      # NATGateway requires provisioned Internet Gateway.
      - InternetGatewayAttachment
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/availability-zone
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        AlarmLevel: !Ref AlarmLevel
        AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: !Ref 'AWS::Region'
        InternetGatewayId: !Ref InternetGateway
        NetworkLoadBalancer: !If
         - CreateNetworkLoadBalancer
         - ENABLED
         - DISABLED
        LogicalName: !Ref AWS::StackName
        SubnetPublicCidrBlock: !Ref SubnetPublicCidrBlockForAz2
        SubnetPrivateCidrBlock: !If
          - CreatePrivateSubnets
          - !Ref SubnetPrivateCidrBlockForAz2
          - !Ref AWS::NoValue
        SubnetTransitCidrBlock: !If
          - CreateTransitGateway
          - !Ref SubnetTransitCidrBlockAz2
          - !Ref AWS::NoValue
        SNSForAlertArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        SNSForDeploymentArn: !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
        VPCId: !Ref VPC
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  Az3:
    DependsOn:
      # NATGateway requires provisioned Internet Gateway.
      - InternetGatewayAttachment
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/availability-zone
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        AlarmLevel: !Ref AlarmLevel
        AvailabilityZone: !Select
          - 2
          - Fn::GetAZs: !Ref 'AWS::Region'
        InternetGatewayId: !Ref InternetGateway
        NetworkLoadBalancer: !If
         - CreateNetworkLoadBalancer
         - ENABLED
         - DISABLED
        LogicalName: !Ref AWS::StackName
        SubnetPublicCidrBlock: !Ref SubnetPublicCidrBlockForAz3
        SubnetPrivateCidrBlock: !If
          - CreatePrivateSubnets
          - !Ref SubnetPrivateCidrBlockForAz3
          - !Ref AWS::NoValue
        SubnetTransitCidrBlock: !If
          - CreateTransitGateway
          - !Ref SubnetTransitCidrBlockAz3
          - !Ref AWS::NoValue
        SNSForAlertArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        SNSForDeploymentArn: !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
        VPCId: !Ref VPC
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  AutoScaling:
    Condition: CreateAutoScaling
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        ACMValidationMethod: !Ref ACMValidationMethod
        ACMDomainName: !Ref ACMDomainName
        AlarmLevel: !Ref AlarmLevel
        AutoScalingDesiredCapacity: !Ref DesiredCapacity
        AutoScalingMaxSize: !Ref AutoScalingMaxSize
        DomainName: !If
          - CreateCloudFront
          - !Sub origin-${DomainName}
          - !Ref DomainName
        EC2ImageId: !Ref EC2ImageId
        EC2InstanceType: !Ref EC2InstanceType
        EC2IamInstanceProfileArn: !GetAtt IamInstanceProfileForIAMRoleForEC2.Arn
        EC2KeyName: !Ref EC2KeyName
        EC2SecurityGroupId: !Ref SecurityGroupWeb
        EC2VolumeSize: !Ref EC2VolumeSize
        EipAllocationId1ForNLB: !If
          - CreateNetworkLoadBalancer
          - !GetAtt Az1.Outputs.NetworkLoadBalancerIPAllocationId
          - ''
        EipAllocationId2ForNLB: !If
          - CreateNetworkLoadBalancer
          - !GetAtt Az2.Outputs.NetworkLoadBalancerIPAllocationId
          - ''
        EipAllocationId3ForNLB: !If
          - CreateNetworkLoadBalancer
          - !GetAtt Az3.Outputs.NetworkLoadBalancerIPAllocationId
          - ''
        LoadBalancerType: !Ref AutoScalingLoadBalancerType
        LogicalName: !Ref AWS::StackName
        Logging: !Ref Logging
        LogBucketName: !Ref S3ForAccessLog
        Route53HostedZoneId: !Ref Route53HostedZoneId
        SubnetId1ForAutoScaling: !GetAtt Az1.Outputs.PrivateSubnetId
        SubnetId2ForAutoScaling: !GetAtt Az2.Outputs.PrivateSubnetId
        SubnetId3ForAutoScaling: !GetAtt Az3.Outputs.PrivateSubnetId
        SubnetId1ForNLB: !GetAtt Az1.Outputs.PublicSubnetId
        SubnetId2ForNLB: !GetAtt Az2.Outputs.PublicSubnetId
        SubnetId3ForNLB: !GetAtt Az3.Outputs.PublicSubnetId
        SNSForAlertArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        SNSForDeploymentArn: !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
        VPCId: !Ref VPC
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TemplateURL: !If
        - Development
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami-test/aws-cloudformation-templates/web-servers/autoscaling.yaml
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami/aws-cloudformation-templates/web-servers/autoscaling.yaml
  DataLifecycleManager:
    Condition: CreateDataLifecycleManager
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        DailySnapshotScheduledAt: !Ref EC2DailySnapshotScheduledAt
        LogicalName: !Ref AWS::StackName
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        - Key: Name
          Value: !Sub policy-${AWS::StackName}-${AWS::Region}
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TemplateURL: !If
        - Development
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami-test/aws-cloudformation-templates/web-servers/dlm.yaml
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami/aws-cloudformation-templates/web-servers/dlm.yaml
  WAF:
    Condition: CreateWAFForALB
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        CentralizedLogBucketName: !Ref CentralizedLogBucketName
        LogicalName: !Ref AWS::StackName
        TargetResourceArn: !GetAtt AutoScaling.Outputs.LoadBalancerArn
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TemplateURL: !If
        - Development
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami-test/aws-cloudformation-templates/edge/waf.yaml
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami/aws-cloudformation-templates/edge/waf.yaml
  CloudFront:
    Condition: CreateCloudFront
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        AlarmLevel: !Ref AlarmLevel
        CertificateManagerARN: !Ref CertificateManagerARN
        DomainName: !Ref DomainName
        CloudFrontDefaultTTL: !Ref CloudFrontDefaultTTL
        CloudFrontMinimumTTL: !Ref CloudFrontMinimumTTL
        CloudFrontMaximumTTL: !Ref CloudFrontMaximumTTL
        CloudFrontViewerProtocolPolicy: !Ref CloudFrontViewerProtocolPolicy
        CloudFrontDefaultRootObject: !Ref CloudFrontDefaultRootObject
        CloudFrontAdditionalName: !Ref CloudFrontAdditionalName
        CloudFrontSecondaryOriginId: !Ref CloudFrontSecondaryOriginId
        CloudFrontRestrictViewerAccess: !Ref CloudFrontRestrictViewerAccess
        CloudFront403ErrorResponsePagePath: !Ref CloudFront403ErrorResponsePagePath
        CloudFront404ErrorResponsePagePath: !Ref CloudFront404ErrorResponsePagePath
        CloudFront500ErrorResponsePagePath: !Ref CloudFront500ErrorResponsePagePath
        CloudFrontOriginDomainName: !If
          - CreateAutoScaling
          - !Sub origin-${DomainName}
          - !GetAtt EC2.PublicDnsName
        CloudFrontOriginType: NOT_S3
        Route53HostedZoneId: !Ref Route53HostedZoneId
        Logging: !Ref Logging
        LogBucketName: !Ref S3ForAccessLog
        WebACLArn: !If
          - CreateWAFForCloudFront
          - !Ref WebACLArnForCloudFront
          - ''
        SNSForAlertArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        SNSForDeploymentArn: !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TemplateURL: !If
        - Development
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami-test/aws-cloudformation-templates/edge/cloudfront.yaml
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami/aws-cloudformation-templates/edge/cloudfront.yaml
  GlobalAccelerator:
    Condition: CreateGlobalAccelerator
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        EndpointId: !If
          - CreateAutoScaling
          - !GetAtt AutoScaling.Outputs.LoadBalancerArn
          - !Ref EIPForEC2Instance
        EndpointGroupRegion: !Ref AWS::Region
        HealthCheckPath: /
        HealthCheckPort: 80
        HealthCheckProtocol: HTTP
        Name: !Ref AWS::StackName
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TemplateURL: !If
        - Development
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami-test/aws-cloudformation-templates/network/globalaccelerator.yaml
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami/aws-cloudformation-templates/edge/network/globalaccelerator.yaml
  ContainerPipeline:
    Condition: CreateContainerPipeline
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        ACMValidationMethod: !Ref ACMValidationMethod
        ACMDomainName: !Ref ACMDomainName
        AlarmLevel: !Ref AlarmLevel
        AppPort: 80
        AutoScalingMaxSize: !Ref AutoScalingMaxSize
        Cpu: 1024
        CpuArchitecture: ARM64
        CodeStarConnectionArn: !Ref CodeStarConnectionArn
        DesiredCapacity: !Ref DesiredCapacity
        DockerFilePath: !Ref DockerFilePath
        DomainName: !Ref DomainName
        GitHubOwnerName: !Ref GitHubOwnerNameForArtifact
        GitHubRepoName: !Ref GitHubRepoNameForArtifact
        GitHubBranchName: !Ref GitHubBranchNameForArtifact
        GitHubBranchNameForBuildSpec: !Ref GitHubBranchNameForBuildSpec
        Logging: !Ref Logging
        LogBucketName: !Ref CentralizedLogBucketName
        Memory: 3072
        PublicSubnetId1: !GetAtt Az1.Outputs.PublicSubnetId
        PublicSubnetId2: !GetAtt Az2.Outputs.PublicSubnetId
        PublicSubnetId3: !GetAtt Az3.Outputs.PublicSubnetId
        PrivateSubnetId1: !GetAtt Az1.Outputs.PrivateSubnetId
        PrivateSubnetId2: !GetAtt Az2.Outputs.PrivateSubnetId
        PrivateSubnetId3: !GetAtt Az3.Outputs.PrivateSubnetId
        Route53HostedZoneId: !Ref Route53HostedZoneId
        S3BucketNameForArtifact: !Ref BucketNameForArtifact
        SecurityGroupId: !Ref SecurityGroupWeb
        VPCId: !Ref VPC
        SNSForAlertArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        SNSForDeploymentArn: !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
        LogicalName: !Sub ${AWS::StackName}-Container
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TemplateURL: !If
        - Development
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami-test/aws-cloudformation-templates/web-servers/codepipeline-container.yaml
        - https://s3-ap-northeast-1.amazonaws.com/eijikominami/aws-cloudformation-templates/web-servers/codepipeline-container.yaml
  SNSForAlert:
    Condition: CreateSNSForAlert
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/sns-topic
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        TopicName: !Sub Alert-createdby-${AWS::StackName}
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  SNSForDeployment:
    Condition: CreateSNSForDeployment
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/sns-topic
        SemanticVersion: 2.2.25
      Parameters:
        TopicName: !Sub Deployment-createdby-${AWS::StackName}
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  # Service-linked Role
  ServiceLinkedRoleForAutoScaling:
    Type: AWS::IAM::ServiceLinkedRole
    Properties:
      AWSServiceName: autoscaling.amazonaws.com
      Description: Default Service-Linked Role enables access to AWS Services and Resources used or managed by Auto Scaling
  ServiceLinkedRoleForElasticLoadBalancing:
    Type: AWS::IAM::ServiceLinkedRole
    Properties:
      AWSServiceName: elasticloadbalancing.amazonaws.com
      Description: Allows ELB to call AWS services on your behalf.
  # IAM
  IAMRoleForEC2:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Description: A role required for Managed Instances.
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonSSMMaintenanceWindowRole
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      Policies:
        - PolicyName: Tags
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:CreateTags
                Resource: '*'
      RoleName: !Sub '${AWS::StackName}-AWSEC2Role-${AWS::Region}'
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  IAMRoleForVPCFlowLog:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: vpc-flow-logs.amazonaws.com
            Action: sts:AssumeRole
      Description: A role required for VPC FlowLog.
      Policies:
        - PolicyName: CloudWatchLogs
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource: '*'
      RoleName: !Sub ${AWS::StackName}-AWSVPCFlowLogRole-${AWS::Region}
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  IAMRoleForFirehose:
    Condition: CreateFirehose
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: firehose.amazonaws.com
            Action: sts:AssumeRole
      Description: A role required for Kinesis Firehose.
      Policies:
        - PolicyName: S3
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:AbortMultipartUpload
                  - s3:GetBucketLocation
                  - s3:GetObject
                  - s3:ListBucket
                  - s3:ListBucketMultipartUploads
                  - s3:PutObject
                  - s3:PutObjectAcl
                Resource:
                  - !GetAtt S3ForAccessLog.Arn
                  - !Join
                      - ''
                      - - !GetAtt S3ForAccessLog.Arn
                        - '/*'
        - PolicyName: CloudWatchLogs
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:PutLogEvents
                Resource: !GetAtt CloudWatchLogsGroupForFirehose.Arn
      RoleName: !Sub ${AWS::StackName}-Firehose-${AWS::Region}
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  IAMRoleForCloudWatchLogs:
    Condition: CreateFirehose
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: !Sub logs.${AWS::Region}.amazonaws.com
            Action: sts:AssumeRole
      Description: A role required for CloudWatch Logs.
      Policies:
        - PolicyName: Firehose
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - firehose:PutRecord
                  - firehose:PutRecords
                Resource: '*'
      RoleName: !Sub ${AWS::StackName}-CloudWatchLogs-${AWS::Region}
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  IAMRoleForS3Replication:
    Condition: CreateS3ReplicationForAnalysis
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: s3.amazonaws.com
            Action: sts:AssumeRole
            Condition:
              StringEquals:
                aws:SourceArn: !Sub 'arn:aws:s3:::${S3ForAccessLog}'
      Description: A role required for S3 to access another S3 bucket for analysis.
      Policies:
        - PolicyName: S3Replication
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetReplicationConfiguration
                  - s3:ListBucket
                Resource:
                  - !Sub 'arn:aws:s3:::${S3ForAccessLog}'
              - Effect: Allow
                Action:
                  - s3:GetObjectVersionForReplication
                  - s3:GetObjectVersionAcl
                  - s3:GetObjectVersionTagging
                Resource:
                  - !Sub 'arn:aws:s3:::${S3ForAccessLog}/*'
              - Effect: Allow
                Action:
                  - s3:ReplicateObject
                  - s3:ReplicateDelete
                  - s3:ReplicateTags
                  - s3:ObjectOwnerOverrideToBucketOwner
                Resource:
                  - !Sub 'arn:aws:s3:::${BucketNameForAnalysis}/*'
      RoleName: !Sub ${AWS::StackName}-S3-Replication-${AWS::Region}
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  # InstanceProfile
  IamInstanceProfileForIAMRoleForEC2:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Ref IAMRoleForEC2
      Roles:
        - !Ref IAMRoleForEC2
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidrBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub vpc-${AWS::StackName}-${AWS::Region}
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  VPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt IAMRoleForVPCFlowLog.Arn
      LogDestinationType: cloud-watch-logs
      LogGroupName: !Ref CloudWatchLogsGroupForVPCFlowLog
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: ALL
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  # VPC Endpoint for ECR
  EcrDkrEndpoint:
    Condition: CreateContainerPipeline
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref SecurityGroupForEndpoint
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      SubnetIds:
        - !GetAtt Az1.Outputs.PrivateSubnetId
        - !GetAtt Az2.Outputs.PrivateSubnetId
        - !GetAtt Az3.Outputs.PrivateSubnetId
      VpcEndpointType: Interface
      VpcId: !Ref VPC
  EcrApiEndpoint:
    Condition: CreateContainerPipeline
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref SecurityGroupForEndpoint
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      SubnetIds:
        - !GetAtt Az1.Outputs.PrivateSubnetId
        - !GetAtt Az2.Outputs.PrivateSubnetId
        - !GetAtt Az3.Outputs.PrivateSubnetId
      VpcEndpointType: Interface
      VpcId: !Ref VPC
  S3Endpoint:
    Condition: CreateContainerPipeline
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - !GetAtt Az1.Outputs.RouteTableIdPrivate
        - !GetAtt Az2.Outputs.RouteTableIdPrivate
        - !GetAtt Az3.Outputs.RouteTableIdPrivate
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcEndpointType: Gateway
      VpcId: !Ref VPC
  LogsEndpoint:
    Condition: CreateContainerPipeline
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref SecurityGroupForEndpoint
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      SubnetIds:
        - !GetAtt Az1.Outputs.PrivateSubnetId
        - !GetAtt Az2.Outputs.PrivateSubnetId
        - !GetAtt Az3.Outputs.PrivateSubnetId
      VpcEndpointType: Interface
      VpcId: !Ref VPC
  # Peering connections with Transit Gateway and VPC for outbound traffic
  TransitGatewayAttachment:
    Condition: CreateTransitGateway
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - !GetAtt Az1.Outputs.TransitSubnetId
        - !GetAtt Az2.Outputs.TransitSubnetId
        - !GetAtt Az3.Outputs.TransitSubnetId
      Tags:
        - Key: Name
          Value: !Sub tgw-attach-${AWS::StackName}-${AWS::Region}
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      TransitGatewayId: !Ref TransitGatewayId
      VpcId: !Ref VPC
  RouteTransitToTransitGatewayAz1:
    Condition: CreateTransitGateway
    DependsOn:
      - TransitGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: !Ref TransitGatewayDestinationCidrBlock
      TransitGatewayId: !Ref TransitGatewayId
      RouteTableId: !GetAtt Az1.Outputs.RouteTableIdTransit
  RouteTransitToTransitGatewayAz2:
    Condition: CreateTransitGateway
    DependsOn:
      - TransitGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: !Ref TransitGatewayDestinationCidrBlock
      TransitGatewayId: !Ref TransitGatewayId
      RouteTableId: !GetAtt Az2.Outputs.RouteTableIdTransit
  RouteTransitToTransitGatewayAz3:
    Condition: CreateTransitGateway
    DependsOn:
      - TransitGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: !Ref TransitGatewayDestinationCidrBlock
      TransitGatewayId: !Ref TransitGatewayId
      RouteTableId: !GetAtt Az3.Outputs.RouteTableIdTransit
  # Internet GW
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub igw-${AWS::StackName}-${AWS::Region}
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  # Elastic IP
  EIPForEC2Instance:
    Condition: CreateEC2
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub eip-${AWS::StackName}-${AWS::Region}-ec2
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  ENIForEC2:
    Type: AWS::EC2::NetworkInterface
    Properties:
      GroupSet:
        - !Ref SecurityGroupWeb
      SubnetId: !GetAtt Az1.Outputs.PublicSubnetId
      Tags:
        - Key: Name
          Value: !Sub eni-${AWS::StackName}-{AWS::Region}-ec2
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  EIPAssociationForEC2:
    Condition: CreateEC2
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt EIPForEC2Instance.AllocationId
      NetworkInterfaceId: !Ref ENIForEC2
  # Route53
  Route53RecordSet:
    Condition: CreateEC2AndRoute53
    Type: AWS::Route53::RecordSet
    Properties:
      Comment: !Ref DomainName
      HostedZoneId: !Ref Route53HostedZoneId
      Name: !Ref DomainName
      ResourceRecords:
        - !Ref EIPForEC2Instance
      TTL: 600
      Type: A
  # EC2
  EC2:
    Condition: CreateEC2
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: !Ref EC2VolumeSize
            VolumeType: gp3
      EbsOptimized: true
      ImageId: !Ref EC2ImageId
      IamInstanceProfile: !Ref IamInstanceProfileForIAMRoleForEC2
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: !Ref EC2InstanceType
      KeyName: !If
        - KeyExists
        - !Ref EC2KeyName
        - !Ref AWS::NoValue
      Monitoring: true
      NetworkInterfaces:
        - DeviceIndex: 0
          NetworkInterfaceId: !Ref ENIForEC2
      UserData: !Base64
        Fn::Join:
          - ''
          - - |
              #!/bin/sh
            - >
              AWS_AVAIL_ZONE=$(curl
              http://169.254.169.254/latest/meta-data/placement/availability-zone)
            - |
              AWS_REGION=${AWS_AVAIL_ZONE::-1}
            - >
              AWS_INSTANCE_ID=$(curl
              http://169.254.169.254/latest/meta-data/instance-id)
            - >
              ROOT_VOLUME_IDS=$(aws ec2 describe-instances --region $AWS_REGION
              --instance-id $AWS_INSTANCE_ID --output text --query
              Reservations[0].Instances[0].BlockDeviceMappings[0].Ebs.VolumeId)
            - !Sub >
              aws ec2 create-tags --resources $ROOT_VOLUME_IDS --region
              $AWS_REGION --tags Key=${TagKey},Value=${TagValue}
      Tags:
        - Key: Name
          Value: !Sub ec2-${AWS::StackName}-${AWS::Region}
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  # Security Group
  SecurityGroupWeb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      # 'sg-' prefix is NOT permitted.
      # CloudFormation cannot update a stack when a custom-named resource requires replacing.
      GroupName: !Sub sgp-${AWS::StackName}-${AWS::Region}-web-20221129
      GroupDescription: Security Group for Web Server
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: http
          FromPort: 80
          ToPort: 80
          IpProtocol: TCP
        - CidrIp: 0.0.0.0/0
          Description: https
          FromPort: 443
          ToPort: 443
          IpProtocol: TCP
        - CidrIp: 0.0.0.0/0
          Description: icmp
          FromPort: -1
          ToPort: -1
          IpProtocol: ICMP
      Tags:
        - Key: Name
          Value: !Sub sgp-${AWS::StackName}-${AWS::Region}-web
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      VpcId: !Ref VPC
  SecurityGroupForEndpoint:
    Condition: CreateContainerPipeline
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub sgp-${AWS::StackName}-${AWS::Region}-vpce-20221129
      GroupDescription: Security Group for VPC Endpoints
      SecurityGroupEgress:
        - CidrIp: !Ref SubnetPrivateCidrBlockForAz1
          IpProtocol: '-1'
        - CidrIp: !Ref SubnetPrivateCidrBlockForAz2
          IpProtocol: '-1'
        - CidrIp: !Ref SubnetPrivateCidrBlockForAz3
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: !Ref SubnetPrivateCidrBlockForAz1
          Description: https
          FromPort: 443
          ToPort: 443
          IpProtocol: TCP
        - CidrIp: !Ref SubnetPrivateCidrBlockForAz2
          Description: https
          FromPort: 443
          ToPort: 443
          IpProtocol: TCP
        - CidrIp: !Ref SubnetPrivateCidrBlockForAz3
          Description: https
          FromPort: 443
          ToPort: 443
          IpProtocol: TCP
      Tags:
        - Key: Name
          Value: !Sub sgp-${AWS::StackName}-${AWS::Region}-vpce
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      VpcId: !Ref VPC
  # CloudWatch
  CloudWatchLogsGroupForVPCFlowLog:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/vpc/${AWS::StackName}
      RetentionInDays: 60
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  CloudWatchAlarmEC2:
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/cloudwatch-alarm-about-ec2
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        CustomAlarmName: !Ref AWS::StackName
        SNSTopicArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        CPUUtilizationThreshold: 70
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  CloudWatchAlarmEC2CWAgent:
    Condition: CreateEC2
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/cloudwatch-alarm-about-ec2-cwagent
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        CustomAlarmName: !Ref AWS::StackName
        DiskUsedPercentThreshold: 90
        ImageId: !Ref EC2ImageId
        InstanceId: !Ref EC2
        InstanceType: !Ref EC2InstanceType
        MemUsedPercentThreshold: 90
        SNSTopicArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  CloudWatchAlarmTransitGatewayAttachment:
    Condition: CreateTransitGateway
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/cloudwatch-alarm-about-transitgateway-attachment
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        CustomAlarmName: !Ref AWS::StackName
        SNSTopicArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        TransitGatewayId: !Ref TransitGatewayId
        TransitGatewayAttachmentId: !Ref TransitGatewayAttachment
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  # Log
  S3ForAccessLog:
    Type: AWS::S3::Bucket
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Properties:
      AccessControl: LogDeliveryWrite
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName: !Join
        - ''
        - - !Join ["-", !Split [".", !Ref DomainName]]
          - !Sub -logs-${AWS::Region}-${AWS::AccountId}
      LifecycleConfiguration:
        Rules:
          - Id: ExpirationInDays
            ExpirationInDays: 60
            Status: Enabled
          - !If
            - CreateS3ReplicationForAnalysis
            - Id: NoncurrentVersionExpirationInDays
              NoncurrentVersionExpiration:
                NewerNoncurrentVersions: 1
                NoncurrentDays: 1
              Status: Enabled
            - !Ref AWS::NoValue
      OwnershipControls:
        Rules:
          - ObjectOwnership: ObjectWriter
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      ReplicationConfiguration: !If
        - CreateS3ReplicationForAnalysis
        - Role: !Sub arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-S3Replication-${AWS::Region}
          Rules:
            - Destination:
                AccessControlTranslation:
                  Owner: Destination
                Account: !Ref AccountIdForAnalysis
                Bucket: !Sub arn:aws:s3:::${BucketNameForAnalysis}
              Id: Analysis
              Status: Enabled
        - !Ref AWS::NoValue
      VersioningConfiguration: !If
        - CreateS3ReplicationForAnalysis
        - Status: Enabled
        - !Ref AWS::NoValue
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  S3BucketPolicyForAccessLog:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3ForAccessLog
      PolicyDocument:
        Version: 2012-10-17
        Id: !Ref S3ForAccessLog
        Statement:
          - Effect: Deny
            Principal: '*'
            Action: 's3:*'
            Resource:
              - !GetAtt S3ForAccessLog.Arn
              - !Join
                - ''
                - - !GetAtt S3ForAccessLog.Arn
                  - /*
            Condition:
              NumericLessThan:
                s3:TlsVersion: 1.2
              Bool:
                aws:SecureTransport: true
  # CloudWatch Logs to S3
  SubscriptionFilter:
    Condition: CreateFirehose
    Type: AWS::Logs::SubscriptionFilter
    Properties:
      DestinationArn: !GetAtt Firehose.Arn
      FilterPattern: ''
      LogGroupName: !Ref LogGroupNameTransferredToS3
      RoleArn: !GetAtt IAMRoleForCloudWatchLogs.Arn
  Firehose:
    Condition: CreateFirehose
    Type: AWS::KinesisFirehose::DeliveryStream
    Properties:
      DeliveryStreamName: !Sub CloudWatchLogsToS3-created-by-${AWS::StackName}
      DeliveryStreamType: DirectPut
      S3DestinationConfiguration:
        BucketARN: !GetAtt S3ForAccessLog.Arn
        BufferingHints:
          IntervalInSeconds: 300
          SizeInMBs: 5
        CloudWatchLoggingOptions:
          Enabled: true
          LogGroupName: !Ref CloudWatchLogsGroupForFirehose
          LogStreamName: !Ref CloudWatchLogsStreamForFirehoseS3
        Prefix: !Sub CloudWatchLogs${LogGroupNameTransferredToS3}/
        RoleARN: !GetAtt IAMRoleForFirehose.Arn
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  # CloudWatch
  CloudWatchAlarmFirehose:
    Condition: CreateFirehose
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/cloudwatch-alarm-about-kinesis-data-firehose
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !If
          - CreateSNSForDeployment
          - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
          - !Ref SNSForDeploymentArn
      Parameters:
        AlarmLevel: !Ref AlarmLevel
        CustomAlarmName : !Ref AWS::StackName
        FirehoseStreamName: !Ref Firehose
        SNSTopicArn: !If
          - CreateSNSForAlert
          - !GetAtt SNSForAlert.Outputs.SNSTopicArn
          - !Ref SNSForAlertArn
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue
  CloudWatchLogsGroupForFirehose:
    Condition: CreateFirehose
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupClass: INFREQUENT_ACCESS
      LogGroupName: !Sub /aws/kinesisfirehose/${AWS::StackName}
      RetentionInDays: 60
      Tags:
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  CloudWatchLogsStreamForFirehoseS3:
    Condition: CreateFirehose
    Type: AWS::Logs::LogStream
    Properties:
      LogGroupName: !Ref CloudWatchLogsGroupForFirehose
      LogStreamName: FirehoseToS3

Outputs:
  CloudFrontURL:
    Condition: CreateCloudFront
    Description: CloudFront URL
    Value: !GetAtt CloudFront.Outputs.CloudFrontURL
  LoadBalancerDNSName:
    Condition: CreateAutoScaling
    Description: LoadBalancer DNS Name
    Value: !GetAtt AutoScaling.Outputs.LoadBalancerDNSName
  VPCCidrBlock:
    Description: VPC CIDR Block
    Value: !GetAtt VPC.CidrBlock
  EC2IP:
    Condition: CreateEC2
    Description: EC2 IP address
    Value: !Ref EIPForEC2Instance
  IAMRoleForS3Replication:
    Condition: CreateS3ReplicationForAnalysis
    Description: IAM Role ARN for S3 Replication
    Value: !GetAtt IAMRoleForS3Replication.Arn
  NatGatewayIP1:
    Description: NatGateway IP address
    Value: !GetAtt Az1.Outputs.NatGatewayIP
  NetworkLoadBalancerIP1:
    Condition: CreateNetworkLoadBalancer
    Description: NetworkLoadBalancer IP
    Value: !GetAtt Az1.Outputs.NetworkLoadBalancerIP
  NatGatewayIP2:
    Description: NatGateway IP address
    Value: !GetAtt Az2.Outputs.NatGatewayIP
  NetworkLoadBalancerIP2:
    Condition: CreateNetworkLoadBalancer
    Description: NetworkLoadBalancer IP address
    Value: !GetAtt Az2.Outputs.NetworkLoadBalancerIP
  NatGatewayIP3:
    Description: NatGateway IP address
    Value: !GetAtt Az3.Outputs.NatGatewayIP
  NetworkLoadBalancerIP3:
    Condition: CreateNetworkLoadBalancer
    Description: NetworkLoadBalancer IP
    Value: !GetAtt Az3.Outputs.NetworkLoadBalancerIP
  PublicSubnetId1:
    Description: Public Subnet Id
    Value: !GetAtt Az1.Outputs.PublicSubnetId
  PublicSubnetId2:
    Description: Public Subnet Id
    Value: !GetAtt Az2.Outputs.PublicSubnetId
  PrivateSubnetId1:
    Description: Private Subnet Id
    Value: !If
      - CreatePrivateSubnets
      - !GetAtt Az1.Outputs.PrivateSubnetId
      - ''
  PrivateSubnetId2:
    Description: Private Subnet Id
    Value: !If
      - CreatePrivateSubnets
      - !GetAtt Az2.Outputs.PrivateSubnetId
      - ''
  PrivateSubnetId3:
    Description: Private Subnet Id
    Value: !If
      - CreatePrivateSubnets
      - !GetAtt Az3.Outputs.PrivateSubnetId
      - ''
  TransitSubnetId1:
    Description: Transit Subnet Id
    Value: !If
      - CreateTransitGateway
      - !GetAtt Az1.Outputs.TransitSubnetId
      - ''
  TransitSubnetId2:
    Description: Transit Subnet Id
    Value: !If
      - CreateTransitGateway
      - !GetAtt Az1.Outputs.TransitSubnetId
      - ''
  TransitSubnetId3:
    Description: Transit Subnet Id
    Value: !If
      - CreateTransitGateway
      - !GetAtt Az3.Outputs.TransitSubnetId
      - ''
  SNSForAlertArn:
    Description: The Amazon SNS topic ARN for alert
    Value: !If
      - CreateSNSForAlert
      - !GetAtt SNSForAlert.Outputs.SNSTopicArn
      - !Ref SNSForAlertArn
  SNSForDeploymentArn:
    Description: The Amazon SNS topic ARN for deployment information
    Value: !If
      - CreateSNSForDeployment
      - !GetAtt SNSForDeployment.Outputs.SNSTopicArn
      - !Ref SNSForDeploymentArn
